# API-axum

./: Cargo.toml  LICENSE  README.md  docker-compose.yml  init.sql
src/: config.rs  main.rs
src/paciente/: mod.rs
src/paciente/controllers/: mod.rs  paciente_controller.rs
src/paciente/modelos/: paciente.rs
src/paciente/models/: mod.rs  paciente.rs
src/paciente/reporsitories/: mod.rs  paciente_repository.rs
src/paciente/routes/: mod.rs  paciente_routes.rs
src/paciente/services/: mod.rs  paciente_service.rs
