[package]
name = "API-axum"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }

#SQL POSTGRESQL
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }

#logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#errores
anyhow = "1.0"

